--- a/TRMDataManager/Web.config
+++ b/TRMDataManager/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TRMDataManager-20200413094039.mdf;Initial Catalog=aspnet-TRMDataManager-20200413094039;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name ="TRMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\TRMData.mdf;Initial Catalog=TRMData;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False" />-->
+    <add name ="TRMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TRMData;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
