--- a/TRMDataManager/Web.config
+++ b/TRMDataManager/Web.config
@@ -5,11 +5,11 @@
   -->
 <configuration>
   <configSections>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TRMDataManager-20200413094039.mdf;Initial Catalog=aspnet-TRMDataManager-20200413094039;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="EFData" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\EFData.mdf;Initial Catalog=EFData;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name ="TRMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\TRMData.mdf;Initial Catalog=TRMData;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False" />-->
     <add name ="TRMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TRMData;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
