--- a/TRMDataManager/Web.config
+++ b/TRMDataManager/Web.config
@@ -13,7 +13,9 @@
     <!--<add name ="TRMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\TRMData.mdf;Initial Catalog=TRMData;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False" />-->
     <add name ="TRMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TRMData;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="taxRate" value="8,75"/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.8" />
