--- a/TRMDesktopUI.Library/TRMDesktopUI.Library.csproj
+++ b/TRMDesktopUI.Library/TRMDesktopUI.Library.csproj
@@ -52,8 +52,10 @@
     <Compile Include="Api\IAPIHelper.cs" />
     <Compile Include="Api\IProductEndPoint.cs" />
     <Compile Include="Api\ISaleEndPoint.cs" />
+    <Compile Include="Api\IUserEndPoint.cs" />
     <Compile Include="Api\ProductEndPoint.cs" />
     <Compile Include="Api\SaleEndPoint.cs" />
+    <Compile Include="Api\UserEndPoint.cs" />
     <Compile Include="Helpers\ConfigHelper.cs" />
     <Compile Include="Helpers\IConfigHelper.cs" />
     <Compile Include="Models\AuthenticatedUser.cs" />
@@ -63,11 +65,18 @@
     <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Models\SaleDetailModel.cs" />
     <Compile Include="Models\SaleModel.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TRMDataManager\TRMDataManager.csproj">
+      <Project>{BAABAFBC-D0EE-440C-A1F4-1ECF0EAF49FE}</Project>
+      <Name>TRMDataManager</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
